test/Fail/Issue2487/d.agda
{-# OPTIONS --safe #-}
module Issue2487.d where

-- trying to import a two-level, non-safe module
open import Issue2487.e
